# demo-hello-world

./: .clang-format  .gitignore  CMakeLists.txt  partitions.csv  readme.md  sdkconfig
Receiver/: readme.md
components/Peripherals/: CMakeLists.txt
components/Peripherals/inc/: battery_monitor.h  bsp_i2c.h  ft6336g.h  i2s_tdm.h  joystick_adc.h  key.h  lsm6ds3.h  st7789.h  st7789_esp_lcd.h  wifi_manager.h  ws2812.h  xpt2046.h
components/Peripherals/src/: battery_monitor.c  bsp_i2c.c  ft6336g.c  i2s_tdm.c  joystick_adc.c  key.c  lsm6ds3.c  st7789.c  st7789_esp_lcd.c  wifi_manager.c  ws2812.c  xpt2046.c
components/Receiver/: CMakeLists.txt  readme.md
components/Receiver/example/: tcp_event_driven_example.c  tcp_refactored_example.c
components/Receiver/inc/: cmd_terminal.h  jpeg_stream_encoder.h  led_status_manager.h  settings_manager.h  spi_slave_receiver.h  task.h  tcp_client.h  tcp_client_with_heartbeat.h  tcp_common_protocol.h  tcp_heartbeat_manager.h  tcp_protocol.h  test.h  usb_device_receiver.h  usb_interface.h  wifi_pairing_manager.h
components/Receiver/src/: cmd_terminal.c  jpeg_stream_encoder.c  led_status_manager.c  receiver_main.c  settings_manager.c  spi_slave_receiver.c  task.c  tcp_client.c  tcp_client_esp32.c  tcp_client_with_heartbeat.c  tcp_common_protocol.c  tcp_heartbeat_example.c  tcp_heartbeat_manager.c  test.c  test_settings.c  usb_device_receiver.c  usb_interface.c  wifi_pairing_manager.c
components/Receiver/tcp_hb/inc/: tcp_client_hb.h
components/Receiver/tcp_hb/src/: tcp_client_hb.c
components/Receiver/tcp_telemetry/inc/: tcp_client_telemetry.h
components/Receiver/tcp_telemetry/src/: tcp_client_telemetry.c
components/lvgl_port/: CMakeLists.txt  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
doc/: README_I2S_TDM.md  README_P2P_UDP.md  README_TCP_EVENT_DRIVEN.md  README_TCP_HEARTBEAT.md  README_TCP_REFACTORED.md  UI_TEMPLATE_GUIDE.md  协议文档.md  引脚说明文档.md  终端命令说明.md
main/: CMakeLists.txt  README_TIME_BATTERY_OPTIMIZATION.md  background_manager.c  components_init.c  hello_world_main.c  idf_component.yml  lsm6ds3_demo.c  lvgl_main.c  main.c  power_management.c  sleep_demo.c  task_init.c
main/UI/: theme_manager.c  theme_manager.h  ui.h  ui_audio_receiver.c  ui_calibration.c  ui_common.c  ui_image_transfer.c  ui_main.c  ui_numeric_keypad.c  ui_p2p_udp_transfer.c  ui_serial_display.c  ui_settings.c  ui_start_animation.c  ui_state_manager.c  ui_telemetry.c  ui_test.c  ui_test.h  ui_wifi_settings.c
main/UI/inc/: status_bar_manager.h  ui.h  ui_calibration.h  ui_common.h  ui_image_transfer.h  ui_numeric_keypad.h  ui_p2p_udp_transfer.h  ui_serial_display.h  ui_state_manager.h  ui_telemetry.h
main/app/: ap_manager.c  audio_receiver.c  background_manager.c  bluetooth_audio_commands.c  calibration_manager.c  lsm6ds_control.c  lvgl_main.c  lvgl_main.h  p2p_udp_image_transfer.c  psram_example.c  psram_example.h  serial_display.c  settings_manager.c  status_bar_manager.c  wifi_image_transfer.c
main/app/Telemetry/: README.md
main/app/Telemetry/inc/: telemetry_data_converter.h  telemetry_main.h  telemetry_protocol.h  telemetry_receiver.h  telemetry_sender.h  telemetry_tcp.h
main/app/Telemetry/src/: telemetry_data_converter.c  telemetry_main.c  telemetry_protocol.c  telemetry_receiver.c  telemetry_sender.c  telemetry_tcp.c
main/app/game/: game.h  game_main.c  game_snake.c  game_tetris.c
main/app/inc/: ap_manager.h  background_manager.h  calibration_manager.h  lsm6ds_control.h  p2p_udp_image_transfer.h  power_management.h  serial_display.h  settings_manager.h  wifi_image_transfer.h
main/demo/: i2s_tdm_demo.c  i2s_tdm_simple_test.c  serial_display_demo.c  spiffs_test_demo.c  wifi_status_demo.c  wifi_time_sync_demo.c
main/fonts/: Mysybmol.c  Mysybmol.h  font_init.c  my_font.h  symbol.c
main/inc/: audio_receiver.h  background_manager.h  color.h  i2s_tdm_demo.h  lsm6ds3_demo.h  lvgl_main.h  serial_display_demo.h  sleep_demo.h  spiffs_test_demo.h  task_init.h  tcp_protocol.h  wifi_status_demo.h  wifi_time_sync_demo.h
others/: README_CALIBRATION_SYSTEM.md  README_PSRAM_OPTIMIZATION.md  README_zh.md  jpeg_server.py
others/consultation/: st7789.c  st7789.h
others/py_test_demo/: README_serial_display.md  baseline-jpeg.py  ground_station_simulator.py  joystick_test_simple.py  jpeg_receiver.py  jpeg_server.py  p2p_udp_client.py  serial_display_client.py  tcp_test_server.py  telemetry_test_client.py  telemetry_test_server.py  test_audio_sender.py  test_serial_display.py
receiver_main/: CMakeLists.txt  idf_component.yml  readme.md
receiver_main/inc/: tcp_client.h
receiver_main/src/: tcp_client.c  tcp_client_esp32.c  tcp_protocol.c
